test: refactor RsmReceiverTest to use @EmbeddedKafka and @KafkaListener, remove EmbeddedKafkaHolder usage